feat: get(resultComments.size() - 1).getId(); 를 getLast로 적용함